// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Component Drawer is open Order does not have balanceDue should match snapshot 1`] = `
<Footer
  drawerOpen={true}
  orderDetails={
    Object {
      "balanceDue": 0,
      "netOrderTotal": 12,
      "status": "COMPLETED",
    }
  }
/>
`;

exports[`Footer Component Drawer is open Order has balanceDue If there is a selected paymentMethod should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
        width="100%"
      >
        <div
          class="sc-bczRLJ sc-gsnTZi mLOuI hzPtvw"
          height="100%"
          width="100%,100%,100%,50%"
        >
          <button
            class="sc-bczRLJ fjaIru"
            font-size="1.25rem"
            height="56px"
            width="100%"
          >
            PAY
             
            $6.78
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
      width="100%"
    >
      <div
        class="sc-bczRLJ sc-gsnTZi mLOuI hzPtvw"
        height="100%"
        width="100%,100%,100%,50%"
      >
        <button
          class="sc-bczRLJ fjaIru"
          font-size="1.25rem"
          height="56px"
          width="100%"
        >
          PAY
           
          $6.78
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Footer Component Drawer is open Order has balanceDue If there is no selected paymentMethod should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
        width="100%"
      >
        <div
          class="sc-bczRLJ sc-gsnTZi mLOuI hzPtvw"
          height="100%"
          width="100%,100%,100%,50%"
        >
          <button
            class="sc-bczRLJ fjaIru"
            font-size="1.25rem"
            height="56px"
            width="100%"
          >
            Enter card & pay
             
            $6.78
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
      width="100%"
    >
      <div
        class="sc-bczRLJ sc-gsnTZi mLOuI hzPtvw"
        height="100%"
        width="100%,100%,100%,50%"
      >
        <button
          class="sc-bczRLJ fjaIru"
          font-size="1.25rem"
          height="56px"
          width="100%"
        >
          Enter card & pay
           
          $6.78
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Footer Component Drawer is open Order is CANCELLED should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
        width="100%"
      >
        <div
          class="sc-bczRLJ sc-gsnTZi dfqnXC hzPtvw"
          color="BLACK"
          font-size="4"
          height="100%"
          width="100%"
        >
          <div
            class="sc-bczRLJ jITePI"
          >
            Account Credited
          </div>
          <div
            class="sc-bczRLJ jITePI"
          >
            $10.00
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
      width="100%"
    >
      <div
        class="sc-bczRLJ sc-gsnTZi dfqnXC hzPtvw"
        color="BLACK"
        font-size="4"
        height="100%"
        width="100%"
      >
        <div
          class="sc-bczRLJ jITePI"
        >
          Account Credited
        </div>
        <div
          class="sc-bczRLJ jITePI"
        >
          $10.00
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Footer Component Drawer is open Order is of type ONLINE should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
        width="100%"
      >
        <div
          class="sc-bczRLJ sc-gsnTZi dfqnXC hzPtvw"
          color="BLACK"
          font-size="4"
          height="100%"
          width="100%"
        >
          <div
            class="sc-bczRLJ jITePI"
          >
            Total Paid
          </div>
          <div
            class="sc-bczRLJ jITePI"
          >
            $5.00
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-bczRLJ sc-gsnTZi qSOsC hzPtvw"
      width="100%"
    >
      <div
        class="sc-bczRLJ sc-gsnTZi dfqnXC hzPtvw"
        color="BLACK"
        font-size="4"
        height="100%"
        width="100%"
      >
        <div
          class="sc-bczRLJ jITePI"
        >
          Total Paid
        </div>
        <div
          class="sc-bczRLJ jITePI"
        >
          $5.00
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
